task2/log/build_2025-11-15_08-52-11/robocon_vision_pkg/stderr.log
  File "/root/ros_ws/tasks/task2/install/robocon_vision_pkg/lib/python3.10/site-packages/robocon_vision_pkg/camera_publisher.py", line 26
    			break
    			^^^^^
SyntaxError: 'break' outside loop

